# roboapp_utils

./: README.md  buf.gen.yaml  buf.yaml  mise.toml
.github/actions/mise/: action.yaml
.github/actions/python/: action.yml
.github/workflows/: configurator.yml  examples.yml  githubaction.yml  test_protos.yml
configurator/: README.md  mise.toml  pyproject.toml
configurator/src/configurator/: autostart.py  check.py  main.py  systemd.py
configurator/template/: roboapp-zenohd.service  zenoh.json5
configurator/template/systemd/: example.service.tmpl  roboapp-lidar-processor.service.tmpl  roboapp-lidar-sender.service.tmpl  roboapp-main-camera-system.service.tmpl  roboapp-uart-bridge.service.tmpl  roboapp-ui-system.service.tmpl
examples/: README.md  mise.toml  pyproject.toml
examples/src/examples/common/: expub.py  zenoh_transmitter.py
examples/src/examples/domain/: messages.py
examples/src/examples/mcu/: dummy_fw.py
examples/src/examples/pub/: camswitch.py  damagepanel.py  damagepanel_color.py  damagepanel_target.py  disk.py  flap.py  lidar_range.py  lidar_vector.py  robot_state.py
examples/src/examples/sub/: all.py  hz.py
proto/: README.md  buf.gen.yaml  buf.yaml  mise.toml
proto/proto/roboapp/: damage_panel.proto  lidar_range.proto
proto/roboapp/: camera_port.proto  camera_switch.proto  damage_panel.proto  damagepanel_color.proto  damagepanel_target.proto  disks.proto  flap.proto  lidar_range.proto  lidar_vector.proto  robot_state.proto
scripts/: test_codegen.sh
