[project]
name = "Examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "motty", email = "motty.mio2@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "eclipse-zenoh==1.6.2",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.3",
    "taskipy>=1.14.1",
    "types-pyserial>=3.5.0.20250326",
]

[tool.mypy]
strict = true

[tool.ruff.lint]
extend-select = ["I", "TC", "UP", "W"]

[tool.taskipy.tasks]
check = "mypy . --strict"
lint = "ruff check ."
format = "ruff check . --fix && ruff format ."
test = "pytest --cov --cov-report=html test/"
