[project]
name = "Examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "motty", email = "motty.mio2@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "betterproto>=1.2.5",
    "eclipse-zenoh==1.6.2",
    "protobuf>=6.33.5",
    "protovalidate>=1.1.1",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.3",
    "taskipy>=1.14.1",
    "types-protobuf>=6.32.1.20251210",
    "types-pyserial>=3.5.0.20250326",
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "examples.domain.proto.*, buf.validate.*"
disable_error_code = ["type-arg"]
ignore_missing_imports = true

[tool.ruff.lint]
extend-select = ["I", "TC", "UP", "W"]

[tool.taskipy.tasks]
check = "mypy . --strict"
lint = "ruff check ."
format = "ruff check . --fix && ruff format ."
test = "pytest --cov --cov-report=html test/"
