[project]
name = "Examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "motty", email = "motty.mio2@gmail.com" },
]
dependencies = [
  "eclipse-zenoh==1.6.2",
  "protobuf>=6.33.5",
  "protovalidate>=1.1.1",
]

[dependency-groups]
dev = [
  "mypy>=1.17.0",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.12.3",
  "taskipy>=1.14.1",
  "types-protobuf>=6.32.1.20251210",
  "types-pyserial>=3.5.0.20250326",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/examples", "src/roboapp", "src/buf"]

[tool.mypy]
strict = true
exclude = ["roboapp.*", "buf.*"]

[tool.ruff]
exclude = ["src/roboapp", "src/buf"]

[tool.ruff.lint]
extend-select = ["I", "TC", "UP", "W"]

[tool.taskipy.tasks]
check = "mypy . --strict"
format = "ruff check . --fix && ruff format ."
lint = "ruff check ."
